<resources>
    <string name="app_name">Prueba Tecnica ADO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">Menú principal</string>
    <string name="first_fragment_label">Películas populares</string>
    <string name="series_fragment_label">Series populares</string>
    <string name="second_fragment_label">Detalle de la pelicular</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="msg_sininfo">Sin información descargada</string>
    <string name="msg_resultados">Rsultados encontrados:</string>
    <string name="msg_mostrarmas">Mostrar más</string>
    <string name="key_youtube">AIzaSyAoRZNm4-kUnvpNAP-3yLy8u7lVwBP25Ro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="three_activity_label">Video Youtube</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="menu_title">Seleccionar una opción</string>
    <string name="msg_trailer">Trailer</string>

</resources>